added more resources about my research

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,8 @@
 ---
 @article{Heinecke_Reyzin_2019, title={Crowdsourced PAC Learning under Classification Noise}, volume={7}, url={https://ojs.aaai.org/index.php/HCOMP/article/view/5279}, abstract={In this paper, we analyze PAC learnability from labels produced by crowdsourcing. In our setting, unlabeled examples are drawn from a distribution and labels are crowdsourced from workers who operate under classification noise, each with their own noise parameter. We develop an end-to-end crowdsourced PAC learning algorithm that takes unlabeled data points as input and outputs a trained classifier. Our three-step algorithm incorporates majority voting, pure-exploration bandits, and noisy-PAC learning. We prove several guarantees on the number of tasks labeled by workers for PAC learning in this setting and show that our algorithm improves upon the baseline by reducing the total number of tasks given to workers. We demonstrate the robustness of our algorithm by exploring its application to additional realistic crowdsourcing settings.}, number={1}, journal={Proceedings of the AAAI Conference on Human Computation and Crowdsourcing,}, author={Shelby Heinecke and Lev Reyzin}, year={2019}, month={Oct.}, pages={41-49},
 arxiv={1902.04629},
-abbr={AAAI-HCOMP}
+abbr={AAAI-HCOMP},
+slides={crowdsourcing.pdf}
 }
 
 @misc{heinecke_2020, title={Resilient Structures and Robust Machine Learning Algorithms}, url={https://indigo.uic.edu/articles/thesis/Resilient_Structures_and_Robust_Machine_Learning_Algorithms/13474959/1}, DOI={10.25417/uic.13474959.v1}, abstract={Networks and learning algorithms are key themes in artificial intelligence (AI). Networks can be used to model the connections of a vast community of internet-of-things (IoT) devices, the internet, and distributed databases, among other important computing contexts for AI. Learning algorithms, which generate trained models, can be strategically designed to learn from a variety of data-rich networks, such as sensor networks, device networks, or even networks of humans working on crowdsourcing tasks. In real-world settings, noise generated from sources such as device inaccuracy or human error are unavoidable. Likewise, attacks in real-world networks, such as the injection of malware, are inevitable due to their ever-evolving sophistication. In this thesis, we study the intrusions of noise and malicious attacks on networks and learning from networks. We devise structural and algorithmic solutions for mitigating the effects of these unwanted intrusions. We first we consider viral propagation under the independent cascade model of infection spread on half-regular bipartite networks and characterize the most resilient structures. Then, we study learning and generalizing from a network of crowd workers, where crowd workers provide erroneous labels to unlabelled data at fixed, unknown error rates. In this setting, we develop a three-step probably approximately correct (PAC) algorithm that incorporates majority voting, pure-exploration bandits, and noisy-PAC learning and demonstrate our algorithm?s improvement over baseline approaches. Finally, we study learning from a network of participants, each with their own distribution on the unlabelled data in the presence of noise. We develop collaborative PAC algorithms robust to classification noise and prove sample complexity bounds. We also study the communication complexity of collaborative PAC learning, with and without classification noise, and develop communication efficient algorithms in both settings.}, publisher={University of Illinois at Chicago}, author={Heinecke, Shelby Lynn}, year={2020}, month={Aug},
@@ -33,5 +34,7 @@ Then, we briefly examine the case where we force a connectivity requirement inst
       primaryClass={cs.LG},
       arxiv={2012.10569},
       abstract={Algorithms for noiseless collaborative PAC learning have been analyzed and optimized in recent years with respect to sample complexity. In this paper, we study collaborative PAC learning with the goal of reducing communication cost at essentially no penalty to the sample complexity. We develop communication efficient collaborative PAC learning algorithms using distributed boosting. We then consider the communication cost of collaborative learning in the presence of classification noise. As an intermediate step, we show how collaborative PAC learning algorithms can be adapted to handle classification noise. With this insight, we develop communication efficient algorithms for collaborative PAC learning robust to classification noise.},
-        abbr={AAAI}
+        abbr={AAAI},
+        video={https://virtual.2021.aaai.org/paper_AAAI-8554.html},
+        slides={AAAI_2021_slides.pdf}
 }
