removed unused stock pictures; added experience images; made changes throughout

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,8 @@ slides={crowdsourcing.pdf}
 }
 
 @misc{heinecke_2020, title={Resilient Structures and Robust Machine Learning Algorithms}, url={https://indigo.uic.edu/articles/thesis/Resilient_Structures_and_Robust_Machine_Learning_Algorithms/13474959/1}, DOI={10.25417/uic.13474959.v1}, abstract={Networks and learning algorithms are key themes in artificial intelligence (AI). Networks can be used to model the connections of a vast community of internet-of-things (IoT) devices, the internet, and distributed databases, among other important computing contexts for AI. Learning algorithms, which generate trained models, can be strategically designed to learn from a variety of data-rich networks, such as sensor networks, device networks, or even networks of humans working on crowdsourcing tasks. In real-world settings, noise generated from sources such as device inaccuracy or human error are unavoidable. Likewise, attacks in real-world networks, such as the injection of malware, are inevitable due to their ever-evolving sophistication. In this thesis, we study the intrusions of noise and malicious attacks on networks and learning from networks. We devise structural and algorithmic solutions for mitigating the effects of these unwanted intrusions. We first we consider viral propagation under the independent cascade model of infection spread on half-regular bipartite networks and characterize the most resilient structures. Then, we study learning and generalizing from a network of crowd workers, where crowd workers provide erroneous labels to unlabelled data at fixed, unknown error rates. In this setting, we develop a three-step probably approximately correct (PAC) algorithm that incorporates majority voting, pure-exploration bandits, and noisy-PAC learning and demonstrate our algorithm?s improvement over baseline approaches. Finally, we study learning from a network of participants, each with their own distribution on the unlabelled data in the presence of noise. We develop collaborative PAC algorithms robust to classification noise and prove sample complexity bounds. We also study the communication complexity of collaborative PAC learning, with and without classification noise, and develop communication efficient algorithms in both settings.}, publisher={University of Illinois at Chicago}, author={Heinecke, Shelby Lynn}, year={2020}, month={Aug},
-html={https://indigo.uic.edu/articles/thesis/Resilient_Structures_and_Robust_Machine_Learning_Algorithms/13474959}} 
+html={https://indigo.uic.edu/articles/thesis/Resilient_Structures_and_Robust_Machine_Learning_Algorithms/13474959},
+abbr={Thesis}} 
 
 
 @INPROCEEDINGS{8636073,
@@ -28,7 +29,7 @@ Then, we briefly examine the case where we force a connectivity requirement inst
   @misc{blum2020communicationaware,
       title={Communication-Aware Collaborative Learning}, 
       author={Avrim Blum and Shelby Heinecke and Lev Reyzin},
-      year={2020},
+      year={2021},
       eprint={2012.10569},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
@@ -37,4 +38,11 @@ Then, we briefly examine the case where we force a connectivity requirement inst
         abbr={AAAI},
         video={https://virtual.2021.aaai.org/paper_AAAI-8554.html},
         slides={AAAI_2021_slides.pdf}
+}
+
+@article{SMALL2012, title={On Measure-Theoretic Sensitivity in the Setting of N^d Actions},
+author={Shelby Heinecke and Emily Wickstrom and Cesar Silva},
+      abbr={In Preparation},
+      year={In Preparation}
+
 }
