added CNAME file to master; updated paper bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,19 +26,9 @@ abbr={Thesis}}
 Then, we briefly examine the case where we force a connectivity requirement instead of a one-sided degree requirement and again, we find that the set of the most resilient graphs contains more than the two "extremes." We also show that determining the subgraph of an arbitrary bipartite graph most resilient to infection is NP-hard for any one-sided minimal degree d >=1.}
   }
   
-  @misc{blum2020communicationaware,
-      title={Communication-Aware Collaborative Learning}, 
-      author={Avrim Blum and Shelby Heinecke and Lev Reyzin},
-      year={2021},
-      eprint={2012.10569},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
-      arxiv={2012.10569},
-      abstract={Algorithms for noiseless collaborative PAC learning have been analyzed and optimized in recent years with respect to sample complexity. In this paper, we study collaborative PAC learning with the goal of reducing communication cost at essentially no penalty to the sample complexity. We develop communication efficient collaborative PAC learning algorithms using distributed boosting. We then consider the communication cost of collaborative learning in the presence of classification noise. As an intermediate step, we show how collaborative PAC learning algorithms can be adapted to handle classification noise. With this insight, we develop communication efficient algorithms for collaborative PAC learning robust to classification noise.},
-        abbr={AAAI},
-        video={https://virtual.2021.aaai.org/paper_AAAI-8554.html},
-        slides={AAAI_2021_slides.pdf}
-}
+@article{Blum_Heinecke_Reyzin_2021, title={Communication-Aware Collaborative Learning}, volume={35}, url={https://ojs.aaai.org/index.php/AAAI/article/view/16838}, abstract={Algorithms for noiseless collaborative PAC learning have been analyzed and optimized in recent years with respect to sample complexity. In this paper, we study collaborative PAC learning with the goal of reducing communication cost at essentially no penalty to the sample complexity. We develop communication efficient collaborative PAC learning algorithms using distributed boosting. We then consider the communication cost of collaborative learning in the presence of classification noise. As an intermediate step, we show how collaborative PAC learning algorithms can be adapted to handle classification noise. With this insight, we develop communication efficient algorithms for collaborative PAC learning robust to classification noise.}, number={8}, journal={Proceedings of the AAAI Conference on Artificial Intelligence}, author={Avrim Blum and Shelby Heinecke and Lev Reyzin}, year={2021}, month={May}, abbr={AAAI}, pages={6786-6793}, slides={AAAI_2021_slides.pdf},  
+  video={https://virtual.2021.aaai.org/paper_AAAI-8554.html},
+  arxiv={2012.10569}}
 
 @article{SMALL2012, title={On Measure-Theoretic Sensitivity in the Setting of N^d Actions},
 author={Shelby Heinecke and Emily Wickstrom and Cesar Silva},
