changed HCOMP label

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @article{Heinecke_Reyzin_2019, title={Crowdsourced PAC Learning under Classification Noise}, volume={7}, url={https://ojs.aaai.org/index.php/HCOMP/article/view/5279}, abstract={In this paper, we analyze PAC learnability from labels produced by crowdsourcing. In our setting, unlabeled examples are drawn from a distribution and labels are crowdsourced from workers who operate under classification noise, each with their own noise parameter. We develop an end-to-end crowdsourced PAC learning algorithm that takes unlabeled data points as input and outputs a trained classifier. Our three-step algorithm incorporates majority voting, pure-exploration bandits, and noisy-PAC learning. We prove several guarantees on the number of tasks labeled by workers for PAC learning in this setting and show that our algorithm improves upon the baseline by reducing the total number of tasks given to workers. We demonstrate the robustness of our algorithm by exploring its application to additional realistic crowdsourcing settings.}, number={1}, journal={Proceedings of the AAAI Conference on Human Computation and Crowdsourcing,}, author={Shelby Heinecke and Lev Reyzin}, year={2019}, month={Oct.}, pages={41-49},
 arxiv={1902.04629},
-abbr={AAAI-HCOMP},
+abbr={HCOMP},
 slides={crowdsourcing.pdf}
 }
 
